--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,9 @@ dependencies:
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
-  flutter_test:
+  flutter_driver:
     sdk: flutter
+  flutter_gherkin:
   
 
 # For information on the generic Dart part of this file, see the
